# AbanConfig

./: Cargo.toml  aban.toml
src/: app_state.rs  appinput.rs  check.rs  checks.rs  command_gen.rs  command_init.rs  command_new.rs  constants.rs  gen_cmake.rs  gen_ps1.rs  gen_src.rs  main.rs  message.rs  module.rs  module_config.rs  project.rs  run.rs  template_cmake.rs  template_os.rs
src/run/: generate.rs  generate_cmake.rs  generate_src.rs  reload_dir.rs  run_cmake.rs  select_dir.rs  update_output.rs
src/run/reload_dir/: config.rs
x/: aban.toml
x/aban-templates/: CMakeLists.txt
x/h/t/: aban.toml
