[package]
name = "aban_config"
version = "0.1.0"
authors = ["Sarvarian <Sarvarian@Hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
toml = "0.5.8"
serde = {version = "1.0.130", features = ["derive"]}
handlebars = "4.1.4"